--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
             <div id = "case-study-intro">
                 <table id = "table-intro">
                     <tr>
-                        <td> <h2 style = "max-width: 600px"> Penny - Simplify budgeting and planning through payment integration</h2>
+                        <td> <h2> Penny - Simplify budgeting and planning through payment integration</h2>
                         </td>
                     </tr>
                 </table>
